# traceframe

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  TRACEFRAME_CODING_AGENT_SPEC.md  pyproject.toml  summary.md
.github/workflows/: test.yml
docs/: api-reference.md  evidence-model.md  examples.md  getting-started.md  local-first.md
examples/aviation/: aog_analysis.py  maintenance.csv
examples/ecommerce/: analysis.py  orders.csv
examples/finance/: analysis.py  revenue.csv
examples/olist/: README.md  analysis.py
examples/olist/data/: olist_customers_dataset.csv  olist_order_items_dataset.csv  olist_orders_dataset.csv
examples/polars/: analysis.py  orders.csv
src/traceframe/: __init__.py  assistant.py  charts.py  checks.py  claims.py  cli.py  diagnostics.py  evidence.py  fingerprint.py  io.py  lineage.py  metrics.py  profiler.py  project.py  report.py  runs.py  source_rows.py  sql.py  stale.py  storage.py  tracking.py
src/traceframe/templates/: report.html.j2
tests/: test_assistant.py  test_charts.py  test_checks.py  test_checks_cli.py  test_fingerprint.py  test_io.py  test_lineage.py  test_metrics.py  test_polars.py  test_project.py  test_report.py  test_runs.py  test_source_rows.py  test_sql.py  test_stale.py  test_workflows.py
