[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "traceframe"
version = "0.2.0"
description = "Local-first evidence tracking for data science."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb",
    "polars",
    "pandas",
    "pyarrow",
    "openpyxl",
    "typer",
    "rich",
    "pydantic",
    "jinja2",
    "altair"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "black"
]

[project.scripts]
traceframe = "traceframe.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
traceframe = ["templates/*.j2"]
